--- a/.gitignore
+++ b/.gitignore
@@ -47,9 +47,6 @@ typings/
 # Optional eslint cache
 .eslintcache
 
-# Optional REPL history
-.node_repl_history
-
 # Output of 'npm pack'
 *.tgz
 
@@ -62,17 +59,11 @@ typings/
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
-# next.js build output
-.next
-
 # nuxt.js build output
 .nuxt
 
 # Nuxt generate
 dist
-
-# vuepress build output
-.vuepress/dist
 
 # Serverless directories
 .serverless
@@ -88,3 +79,10 @@ sw.*
 
 # Vim swap files
 *.swp
+
+# yarn v2
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
