--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt generate",
+    "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
@@ -13,30 +13,53 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/google-fonts": "^2.0.0",
+    "@nuxtjs/google-gtag": "^1.0.4",
+    "@nuxtjs/i18n": "^7.2.3",
     "@nuxtjs/pwa": "^3.3.5",
-    "@yeger/vue2-masonry-wall": "^2.0.39",
+    "@nuxtjs/sentry": "^5.1.7",
+    "@nuxtjs/sitemap": "^2.4.0",
+    "@yeger/vue2-masonry-wall": "^2.0.43",
     "aos": "3.0.0-beta.6",
     "bootstrap": "5.2.0",
-    "core-js": "^3.24.0",
+    "core-js": "^3.24.1",
     "nuxt": "^2.15.8",
+    "nuxt-helmet": "^2.1.1",
     "photoswipe": "^5.3.0",
+    "vanilla-tilt": "^1.7.2",
     "vue": "^2.6.14",
+    "vue-lazy-hydration": "^2.0.0-beta.4",
     "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
+    "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.18.9",
+    "@babel/runtime-corejs3": "^7.18.9",
+    "@nuxt/image": "^0.7.1",
     "@nuxt/types": "~2.15.8",
+    "@nuxtjs/color-mode": "2.1.1",
+    "@nuxtjs/device": "^2.1.0",
     "@nuxtjs/eslint-config": "^10.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
-    "eslint": "^8.20.0",
+    "@nuxtjs/google-fonts": "2.0.0",
+    "@nuxtjs/svg": "^0.4.0",
+    "eslint": "^8.22.0",
     "eslint-plugin-nuxt": "^3.2.0",
     "eslint-plugin-vue": "^9.3.0",
+    "nuxt-compress": "^5.0.0",
     "nuxt-purgecss": "^1.0.0",
-    "sass": "^1.54.0",
-    "sass-loader": "10.3.1"
+    "postcss-html": "^1.3.0",
+    "sass": "^1.54.4",
+    "sass-loader": "10.3.1",
+    "shrink-ray-current": "^4.1.3"
   },
+  "optionalDependencies": {
+    "node-zopfli-es": "~1.0.3"
+  },
+  "browserslist": [
+    "> 0.5%",
+    "last 15 versions",
+    "Firefox ESR",
+    "not dead"
+  ],
   "packageManager": "yarn@3.2.2"
 }
