--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@nuxtjs/device": "^2.1.0",
     "@nuxtjs/eslint-config": "^10.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
-    "@nuxtjs/google-fonts": "2.0.0",
+    "@nuxtjs/google-fonts": "3.0.0-0",
     "@nuxtjs/svg": "^0.4.0",
     "eslint": "^8.22.0",
     "eslint-plugin-nuxt": "^3.2.0",
