--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js",
+    "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue}\" --ignore-path .gitignore",
+    "lint": "yarn lint:js && yarn lint:style",
     "lintfix": "yarn lint:js --fix"
   },
   "dependencies": {
@@ -16,15 +17,15 @@
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/i18n": "^7.3.0",
     "@nuxtjs/pwa": "^3.3.5",
-    "@nuxtjs/sentry": "^5.1.7",
+    "@nuxtjs/sentry": "^6.0.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "@yeger/vue2-masonry-wall": "^2.0.48",
+    "@yeger/vue2-masonry-wall": "^2.0.53",
     "aos": "3.0.0-beta.6",
-    "bootstrap": "5.2.0",
-    "core-js": "^3.25.0",
+    "bootstrap": "5.2.1",
+    "core-js": "^3.25.1",
     "nuxt": "^2.15.8",
     "nuxt-helmet": "^2.1.1",
-    "photoswipe": "^5.3.0",
+    "photoswipe": "^5.3.2",
     "vanilla-tilt": "^1.7.2",
     "vue": "^2.6.14",
     "vue-lazy-hydration": "^2.0.0-beta.4",
@@ -32,24 +33,30 @@
     "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.18.9",
-    "@babel/runtime-corejs3": "^7.18.9",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/runtime-corejs3": "^7.19.1",
     "@nuxt/image": "^0.7.1",
     "@nuxt/types": "~2.15.8",
     "@nuxtjs/color-mode": "2.1.1",
     "@nuxtjs/device": "^2.1.0",
-    "@nuxtjs/eslint-config": "^10.0.0",
+    "@nuxtjs/eslint-config": "^11.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/google-fonts": "3.0.0-0",
+    "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/svg": "^0.4.0",
-    "eslint": "^8.22.0",
-    "eslint-plugin-nuxt": "^3.2.0",
-    "eslint-plugin-vue": "^9.4.0",
+    "eslint": "^8.23.1",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-vue": "^9.5.1",
     "nuxt-compress": "^5.0.0",
     "nuxt-purgecss": "^1.0.0",
-    "sass": "^1.54.5",
+    "postcss-html": "^1.5.0",
+    "sass": "^1.54.9",
     "sass-loader": "10.3.1",
-    "shrink-ray-current": "^4.1.3"
+    "shrink-ray-current": "^4.1.3",
+    "stylelint": "^14.1.0",
+    "stylelint-config-recommended-vue": "^1.1.0",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-twbs-bootstrap": "^5.0.0"
   },
   "optionalDependencies": {
     "node-zopfli-es": "~1.0.3"
