--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint:style": "stylelint \"**/*.{css,scss,sass,html,vue}\" --ignore-path .gitignore",
-    "lint": "yarn lint:js && yarn lint:style",
+    "lint": "yarn lint:js",
     "lintfix": "yarn lint:js --fix"
   },
   "dependencies": {
@@ -33,7 +32,6 @@
     "vue-template-compiler": "^2.6.14"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
     "@babel/runtime-corejs3": "^7.20.1",
     "@nuxt/image": "^0.7.1",
     "@nuxt/types": "~2.15.8",
@@ -42,7 +40,6 @@
     "@nuxtjs/eslint-config": "^11.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
     "@nuxtjs/google-fonts": "3.0.0-1",
-    "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/svg": "^0.4.0",
     "eslint": "^8.27.0",
     "eslint-plugin-nuxt": "^4.0.0",
@@ -52,11 +49,7 @@
     "postcss-html": "^1.5.0",
     "sass": "^1.56.1",
     "sass-loader": "10.3.1",
-    "shrink-ray-current": "^4.1.3",
-    "stylelint": "^14.1.0",
-    "stylelint-config-recommended-vue": "^1.1.0",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-config-twbs-bootstrap": "^5.0.0"
+    "shrink-ray-current": "^4.1.3"
   },
   "optionalDependencies": {
     "node-zopfli-es": "~1.0.3"
