--- a/package.json
+++ b/package.json
@@ -1,58 +1,41 @@
 {
   "name": "adriansalvador",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+    "dev": "nuxi dev",
+    "build": "nuxi build",
+    "start": "nuxi preview",
+    "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js",
-    "lintfix": "yarn lint:js --fix"
+    "lint:fix": "yarn lint:js --fix"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/google-gtag": "^1.0.4",
-    "@nuxtjs/i18n": "^7.3.0",
-    "@nuxtjs/pwa": "^3.3.5",
-    "@nuxtjs/sentry": "^6.0.2",
-    "@nuxtjs/sitemap": "^2.4.0",
-    "@yeger/vue2-masonry-wall": "^2.3.1",
+    "@nuxtjs/i18n": "8.0.0-beta.7",
+    "@yeger/vue-masonry-wall": "^3.4.3",
     "aos": "3.0.0-beta.6",
     "bootstrap": "5.2.3",
-    "core-js": "^3.26.1",
-    "nuxt": "^2.15.8",
-    "nuxt-helmet": "^2.1.1",
-    "photoswipe": "^5.3.4",
-    "vanilla-tilt": "^1.8.0",
-    "vue": "^2.6.14",
-    "vue-lazy-hydration": "^2.0.0-beta.4",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14"
+    "nuxt-lazy-hydrate": "^0.1.0",
+    "nuxt-security": "^0.10.2",
+    "photoswipe": "^5.3.5",
+    "vanilla-tilt": "^1.8.0"
   },
   "devDependencies": {
-    "@babel/runtime-corejs3": "^7.20.6",
-    "@nuxt/image": "^0.7.1",
-    "@nuxt/types": "~2.15.8",
-    "@nuxtjs/color-mode": "2.1.1",
-    "@nuxtjs/device": "^2.1.0",
-    "@nuxtjs/eslint-config": "^12.0.0",
-    "@nuxtjs/eslint-module": "^3.1.0",
+    "@nuxt/image-edge": "1.0.0-27919678.2f5b64b",
+    "@nuxtjs/color-mode": "3.2.0",
+    "@nuxtjs/device": "^3.1.0",
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/google-fonts": "3.0.0-1",
-    "@nuxtjs/svg": "^0.4.0",
-    "eslint": "^8.29.0",
+    "@types/aos": "^3.0.4",
+    "@types/node": "^18.13.0",
+    "eslint": "^8.34.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-vue": "^9.8.0",
-    "nuxt-compress": "^5.0.0",
-    "nuxt-purgecss": "^1.0.0",
-    "postcss-html": "^1.5.0",
-    "sass": "^1.56.2",
-    "sass-loader": "10.4.1",
-    "shrink-ray-current": "^4.1.3"
-  },
-  "optionalDependencies": {
-    "node-zopfli-es": "~1.0.3"
+    "nuxt": "3.2.0",
+    "nuxt-icon": "^0.2.11",
+    "nuxt-purgecss": "^2.0.0",
+    "sass": "^1.58.0",
+    "sass-loader": "13.2.0",
+    "typescript": "^4.9.5"
   },
   "browserslist": [
     "> 0.5%",
@@ -60,5 +43,5 @@
     "Firefox ESR",
     "not dead"
   ],
-  "packageManager": "pnpm@7.18.2"
+  "packageManager": "pnpm@7.19.0"
 }
