--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@nuxtjs/i18n": "8.0.0-beta.9",
     "@yeger/vue-masonry-wall": "^3.4.3",
     "aos": "3.0.0-beta.6",
-    "bootstrap": "5.2.3",
+    "bootstrap": "5.3.0-alpha1",
     "nuxt-lazy-hydrate": "^0.1.0",
     "nuxt-security": "^0.10.2",
     "photoswipe": "^5.3.5",
