--- a/package.json
+++ b/package.json
@@ -12,31 +12,37 @@
   },
   "dependencies": {
     "@nuxtjs/i18n": "8.0.0-beta.9",
-    "@yeger/vue-masonry-wall": "^3.4.3",
+    "@yeger/vue-masonry-wall": "^3.4.4",
     "aos": "3.0.0-beta.6",
     "bootstrap": "5.3.0-alpha1",
     "nuxt-lazy-hydrate": "^0.1.0",
-    "nuxt-security": "^0.10.2",
-    "photoswipe": "^5.3.5",
+    "nuxt-security": "^0.11.0",
+    "photoswipe": "^5.3.6",
+    "rellax": "^1.12.1",
     "vanilla-tilt": "^1.8.0"
   },
   "devDependencies": {
-    "@nuxt/image-edge": "1.0.0-27919678.2f5b64b",
+    "@nuxt/devtools": "^0.2.5",
+    "@nuxt/image-edge": "1.0.0-27968280.9739e4d",
     "@nuxtjs/color-mode": "3.2.0",
     "@nuxtjs/device": "^3.1.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/google-fonts": "3.0.0-1",
     "@types/aos": "^3.0.4",
-    "@types/node": "^18.14.0",
-    "@vite-pwa/nuxt": "^0.0.5",
-    "eslint": "^8.34.0",
+    "@types/node": "^18.14.6",
+    "@types/rellax": "^1.7.4",
+    "@vite-pwa/nuxt": "^0.0.7",
+    "@vueuse/core": "^9.13.0",
+    "@vueuse/nuxt": "^9.13.0",
+    "eslint": "^8.35.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "nuxt": "3.2.2",
+    "nuxt": "3.2.3",
     "nuxt-icon": "^0.3.2",
     "nuxt-purgecss": "^2.0.0",
-    "sass": "^1.58.2",
+    "sass": "^1.58.3",
     "sass-loader": "13.2.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vue-gtag-next": "^1.14.0"
   },
   "browserslist": [
     "> 0.5%",
