--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@yeger/vue-masonry-wall": "^3.4.4",
     "aos": "3.0.0-beta.6",
     "bootstrap": "5.3.0-alpha1",
-    "nuxt-lazy-hydrate": "^0.1.0",
     "nuxt-security": "^0.13.0",
     "photoswipe": "^5.3.6",
     "rellax": "^1.12.1",
@@ -25,8 +24,10 @@
     "@nuxt/devtools": "^0.2.5",
     "@nuxt/image-edge": "1.0.0-27991759.1a5eea1",
     "@nuxtjs/color-mode": "3.2.0",
+    "@nuxtjs/critters": "^0.4.0",
     "@nuxtjs/device": "^3.1.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxtjs/fontaine": "^0.2.4",
     "@nuxtjs/google-fonts": "3.0.0",
     "@types/aos": "^3.0.4",
     "@types/node": "^18.15.6",
