--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^8.36.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "nuxt": "3.3.2",
+    "nuxt-gtag": "^0.3.0",
     "nuxt-icon": "^0.3.3",
     "nuxt-purgecss": "^2.0.0",
     "sass": "^1.60.0",
