--- a/renovate.json
+++ b/renovate.json
@@ -3,8 +3,8 @@
   "extends": [
     "config:base"
   ],
-  "commitMessagePrefix": "🔼",
-  "commitMessageAction": "Bump",
+  "commitMessagePrefix": "chore(dep):",
+  "commitMessageAction": "bump",
   "commitMessageExtra": "to {{newValue}}",
   "commitMessageTopic": "{{depName}}",
   "dependencyDashboard": true,
