--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nuxt-gtag": "^0.3.0",
     "nuxt-icon": "^0.3.3",
     "nuxt-purgecss": "^2.0.0",
+    "nuxt-simple-sitemap": "^2.2.0",
     "sass": "^1.60.0",
     "sass-loader": "13.2.1",
     "typescript": "^4.9.5"
