--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "^0.3.2",
+    "@nuxt/eslint-config": "^0.1.1",
     "@nuxt/image-edge": "1.0.0-28008586.381b906",
     "@nuxtjs/color-mode": "3.2.0",
     "@nuxtjs/critters": "^0.4.0",
     "@nuxtjs/device": "^3.1.0",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/fontaine": "^0.2.4",
     "@nuxtjs/google-fonts": "3.0.0",
     "@types/aos": "^3.0.4",
@@ -36,7 +36,6 @@
     "@vueuse/core": "^9.13.0",
     "@vueuse/nuxt": "^9.13.0",
     "eslint": "^8.38.0",
-    "eslint-plugin-nuxt": "^4.0.0",
     "nuxt": "3.3.3",
     "nuxt-gtag": "^0.5.1",
     "nuxt-icon": "^0.3.3",
