--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxtjs/fontaine": "^0.2.5",
     "@nuxtjs/google-fonts": "3.0.0",
     "@nuxtjs/i18n": "8.0.0-beta.11",
+    "@parcel/watcher": "^2.1.0",
     "@types/aos": "^3.0.4",
     "@types/node": "^18.16.2",
     "@types/rellax": "^1.7.4",
