--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@kevinmarrec/nuxt-pwa": "^0.17.0",
     "@nuxt/devtools": "^0.5.5",
     "@nuxt/eslint-config": "^0.1.1",
-    "@nuxt/image-edge": "1.0.0-28094923.e859bba",
+    "@nuxt/image": "rc",
     "@nuxtjs/color-mode": "3.2.0",
     "@nuxtjs/critters": "^0.4.1",
     "@nuxtjs/device": "^3.1.0",
