--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/fontaine": "^0.4.1",
     "@nuxtjs/google-fonts": "3.1.3",
+    "@nuxtjs/sitemap": "^5.0.1",
     "@types/node": "^20.10.7",
     "@vueuse/core": "^10.7.1",
     "@vueuse/nuxt": "^10.7.1",
@@ -36,7 +37,6 @@
     "nuxt-gtag": "^1.1.2",
     "nuxt-icon": "^0.6.8",
     "nuxt-purgecss": "^2.0.0",
-    "nuxt-simple-sitemap": "^4.4.1",
     "sass": "^1.69.7",
     "typescript": "^5.3.3"
   },
