--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
   "devDependencies": {
     "@kevinmarrec/nuxt-pwa": "^0.17.0",
     "@nuxt/eslint-config": "^0.2.0",
+    "@nuxt/fonts": "^0.2.0",
     "@nuxt/image": "1.4.0",
     "@nuxtjs/color-mode": "3.3.2",
     "@nuxtjs/critters": "^0.6.0",
     "@nuxtjs/device": "^3.1.1",
-    "@nuxtjs/fontaine": "^0.4.1",
-    "@nuxtjs/google-fonts": "3.1.3",
     "@nuxtjs/sitemap": "^5.1.2",
     "@types/node": "^20.11.25",
     "@vueuse/core": "^10.9.0",
