chore: set package type to module

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "adriansalvador",
   "version": "2.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "nuxt dev",
