--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/sitemap": "^5.1.2",
     "@types/node": "^20.11.30",
+    "@vite-pwa/nuxt": "^0.6.0",
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
     "eslint": "^8.57.0",
