chore(deps): downgrade nuxt-security to ^1.2.0
https://github.com/Baroshem/nuxt-security/pull/414

--- a/renovate.json
+++ b/renovate.json
@@ -10,7 +10,7 @@
   "commitMessageTopic": "{{depName}}",
   "dependencyDashboard": true,
   "rebaseWhen": "conflicted",
-  "ignoreDeps": ["bootstrap"],
+  "ignoreDeps": ["bootstrap", "nuxt-security"],
   "labels": ["dependencies"],
   "packageRules": [
     {
