--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vueuse/nuxt": "^10.11.0",
     "eslint": "^9.5.0",
     "nuxt": "^3.12.2",
+    "nuxt-build-cache": "^0.1.1",
     "nuxt-gtag": "^2.0.6",
     "nuxt-purgecss": "^2.0.0",
     "sass": "^1.77.6",
