--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
           touch .env
           echo CDN_BASE_URL=${{ secrets.CDN_BASE_URL }} >> .env
+          echo BASE_URL=${{ secrets.BASE_URL }} >> .env
       - run: corepack enable
       - uses: pnpm/action-setup@v4.0.0
       - uses: actions/setup-node@v4
@@ -61,6 +62,7 @@ jobs:
         run: |
           touch .env
           echo CDN_BASE_URL=${{ secrets.CDN_BASE_URL }} >> .env
+          echo BASE_URL=${{ secrets.BASE_URL }} >> .env
       - run: corepack enable
       - uses: pnpm/action-setup@v4.0.0
       - uses: actions/setup-node@v4
